fix: adaptation fixes
 - vibration added
 - new error handlers
 - ux updates

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
             <action android:name="android.intent.action.VIEW" />
         </intent>
     </queries>
+    <uses-permission android:name="android.permission.VIBRATE" />
     <application
 
         android:allowBackup="true"
